--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -43,6 +43,9 @@
 .leading-11 {
   line-height: 3rem;
 }
+.leading-12 {
+  line-height: 3.25rem;
+}
 .radius-br {
   border-bottom-right-radius: 55px;
 }
@@ -132,5 +135,8 @@
   }
   .text-lrg {
     font-size: 1.8rem;
+  }
+  .leading-12 {
+    line-height: 2.2rem;
   }
 }
